# prisma-rust-composite-problems

./: .env  .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
src/: main.rs
